Issue #90: Improve density and dark mode on Views "Add Field" modal. Fixes #90.

--- a/styles/base/_backdrop-overrides.scss
+++ b/styles/base/_backdrop-overrides.scss
@@ -560,8 +560,14 @@ fieldset.collapsible.collapsed {
   }
 }
 
-#user-admin-permissions .search-reset {
-  line-height: inherit;
+#user-admin-permissions {
+  .search-reset {
+    line-height: inherit;
+  }
+  .table-filter {
+    background-color: transparent;
+    border: none;
+  }
 }
 
 /* Views Bulk Operations */
