--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -228,7 +228,7 @@
 }
 
 // Single Checkbox: show as toggle
-:not(.form-checkboxes):not(td):not(.tabledrag-cell-content__item):not(.media-library-item__click-to-select-checkbox):not(.field-content) > .form-type-checkbox {
+:not(.form-checkboxes):not(td):not(.tabledrag-cell-content__item):not(.media-library-item__click-to-select-checkbox):not(.field-content):not(.filterable-option) > .form-type-checkbox {
   position: relative;
   margin-left: 0;
 
